# wzirni-project

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  docker-compose.analysis.yaml  docker-compose.yaml  pyproject.toml
cicflowmeter/: Dockerfile
cicflowmeter/output/: flow.csv  flows_classified.csv
cicflowmeter/output/analysis/: flows_classified.csv  packet_size_summary.csv  strong_correlations.csv  summary_report.csv  summary_statistics.csv
client/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
docs/: Dockerfile  mkdocs.yml
docs/docs/: index.md  troubleshooting.md
docs/docs/analysis/: cicflowmeter.md  wireshark.md
docs/docs/architecture/: clients.md  containers.md  overview.md
docs/docs/getting-started/: installation.md  quickstart.md
docs/docs/reference/: api.md
flow-analyzer/: Dockerfile  analyze_flows.py  pyproject.toml
polar-proxy/: Dockerfile  server-cert.crt
server/: Dockerfile  key.pem  main.py  pyproject.toml
zeek/scripts/: analysis.zeek
