[project]
name = "wzirni-project"
version = "0.1.0"
description = "Metody analizy szyfrowanego ruchu sieciowego"
authors = [
    {name = "Konrad Springer",email = "konrad.springer@student.pk.edu.pl"},
    {name = "Adam Tylec",email = "example@student.pk.edu.pl"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.13,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
