[project]
name = "client"
version = "0.1.0"
description = "Client for network traffic analysis"
authors = [
    {name = "Konrad Springer",email = "konrad.springer@student.pk.edu.pl"},
    {name = "Adam Tylec",email = "example@student.pk.edu.pl"}
]

requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
