[project]
name = "flow-analyzer"
version = "0.1.0"
description = "Python Analysis Script"
authors = [
    {name = "Konrad Springer",email = "konrad.springer@student.pk.edu.pl"},
    {name = "Adam Tylec",email = "example@student.pk.edu.pl"}
]

requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
